# ml-laptop-price-prediction

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mlflow.db  pyproject.toml  setup_fastapi.ps1  setup_project.ps1  test_logger.py  tree.txt
.github/workflows/: ci.yml
app/: main.py
app/routers/: prediction.py
app/schemas/: request.py  response.py
app/services/: prediction_service.py
artifacts/models/: model.pkl  preprocessor.pkl
artifacts/test/: config.yaml  sample.pkl
config/: schema.yaml
src/components/: __init__.py  data_ingestion.py  data_transformation.py  data_validation.py  model_trainer.py
src/config/: __init__.py  configuration.py  ingestion.py  paths.py  trainer.py  transformation.py  validation.py
src/constants/: __init__.py  constants.py  dataset.py  model.py  training.py
src/entity/: __init__.py  data_transformation_artifact.py  model_evaluation_result.py  model_trainer_artifact.py
src/exception/: __init__.py  exception.py
src/logger/: logger.py
src/mlflow/: mlflow_manager.py
src/pipeline/: prediction_pipeline.py
src/utils/: __init__.py  file_utils.py  yaml_utils.py
tests/: conftest.py  test_api.py  test_configuration.py  test_constants.py  test_data_ingestion.py  test_data_transformation.py  test_data_validation.py  test_exception.py  test_file_utils.py  test_logger.py  test_mlflow_manager.py  test_model_trainer.py  test_prediction_pipeline.py  test_prediction_service.py  test_yaml_utils.py
