[project]
name = "ml-laptop-price-prediction"
version = "0.1.0"
description = "Production-ready laptop price prediction system"
authors = [
    { name = "Mayank Dhillon", email = "dhillonmayank2000@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = ["pandas (>=2.2.3,<3.0.0)", "numpy (>=2.5.1,<3.0.0)", "scikit-learn (>=1.9.0,<2.0.0)", "matplotlib (>=3.11.1,<4.0.0)", "seaborn (>=0.13.2,<0.14.0)", "xgboost (>=3.3.0,<4.0.0)", "lightgbm (>=4.7.0,<5.0.0)", "catboost (>=1.2.10,<2.0.0)", "joblib (>=1.5.3,<2.0.0)", "mlflow (>=3.14.0,<4.0.0)", "fastapi (>=0.139.2,<0.140.0)", "uvicorn (>=0.51.0,<0.52.0)", "jinja2 (>=3.1.6,<4.0.0)", "python-multipart (>=0.0.32,<0.0.33)", "pyyaml (>=6.0.3,<7.0.0)", "python-dotenv (>=1.2.2,<2.0.0)", "pydantic-settings (>=2.14.2,<3.0.0)"]

[tool.poetry]
package-mode = false

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "black (>=26.5.1,<27.0.0)",
    "ruff (>=0.15.22,<0.16.0)",
    "isort (>=8.0.1,<9.0.0)",
    "mypy (>=2.3.0,<3.0.0)",
    "pytest (>=9.1.1,<10.0.0)",
    "pytest-cov (>=7.1.0,<8.0.0)",
    "pre-commit (>=4.6.0,<5.0.0)",
    "httpx (>=0.28.1,<1.0.0)"
]
